--- a/dijkstra-heap/.settings/org.eclipse.core.resources.prefs
+++ b/dijkstra-heap/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/Dijkstra.java=UTF-8
+encoding//src/Grafo.java=UTF-8
 encoding//src/MonticuloSesgado.java=UTF-8
+encoding//src/Par.java=UTF-8
